--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
         <tr style="padding:0px">
             <td style="padding:2.5%;width:63%;vertical-align:middle">
-                <p>I am  a researcher working in the fields of machine learning and artificial intelligence. My research interests lies in the fields of machine learning and artificial intelligence, with focus on exploring pathways towards robust, stable and trustworthy AI systems. This involves the development of high-performance software and efficient scaling of large-scale simulations. My current work is on the principled study of modern computer vision and large language models, their <a href="https://ieeexplore.ieee.org/abstract/document/9892337">structures</a>, <a href="https://www.sciencedirect.com/science/article/pii/S089360802400635X">functions</a>, <a href="https://ieeexplore.ieee.org/document/10191304">optimization</a>, and methods to <a href="https://huggingface.co/spaces/qinghua-zhou/stealth-edits">edit or attack</a> them.</p>
+                <p>I am  a researcher working in the fields of machine learning and artificial intelligence. My research interests lies in exploring pathways towards robust, stable and trustworthy AI systems. This includes the development of high-performance software and efficient scaling of large-scale simulations. My most current work is on the principled theoretical and computational analysis of modern computer vision and large language models, their <a href="https://ieeexplore.ieee.org/abstract/document/9892337">structures</a>, <a href="https://www.sciencedirect.com/science/article/pii/S089360802400635X">functions</a>, <a href="https://ieeexplore.ieee.org/document/10191304">optimization</a>, and methods to <a href="https://huggingface.co/spaces/qinghua-zhou/stealth-edits">edit or attack</a> them.</p>
 
-                <p>I am currently working as a <a href="https://kclpure.kcl.ac.uk/portal/en/persons/qinghua.zhou">Postdoctoral Research Associate in Methods and Algorithms of AI</a> in the Department of Mathematics at <a href="https://www.kcl.ac.uk/">King's College London (KCL)</a>, where I’m fortunate to work with and be advised by <a href="https://www.kcl.ac.uk/people/ivan-tyukin-1">Prof. Ivan Y. Tyukin</a>. My background is in computer science, having received a PhD from the <a href="https://le.ac.uk/">University of Leicester</a> with a focus on learning in the high-dimensional and low-sample size domain with a wide range of medical data. Before that, I received a Bachelor of Science degree from the <a href="https://www.sydney.edu.au/">University of Sydney (USYD)</a>, majoring in both Physics and Applied Mathematics, with an introduction to scientific research through the lens of Asteroseismology.</p>
+                <p>I am currently working as a <a href="https://kclpure.kcl.ac.uk/portal/en/persons/qinghua.zhou">Postdoctoral Research Associate in Methods and Algorithms of AI</a> in the Department of Mathematics at <a href="https://www.kcl.ac.uk/">King's College London (KCL)</a>, where I’m fortunate to work with <a href="https://oliversutton.info/">Dr Oliver J. Sutton</a> and be advised by <a href="https://www.kcl.ac.uk/people/ivan-tyukin-1">Prof. Ivan Y. Tyukin</a>. My background is in computer science, having received a PhD from the <a href="https://le.ac.uk/">University of Leicester</a> with a focus on learning from high-dimensional low-sample size data in medical applications. Before that, I received a Bachelor of Science degree from the <a href="https://www.sydney.edu.au/">University of Sydney (USYD)</a>, majoring in both Physics and Applied Mathematics, with an introduction to scientific research through the lens of Asteroseismology.</p>
                 
                 <p>My broad interest in the field of AI has led to practical experiences in a wide variety of domains, including ensemble learning, weak-supervision, few-shot learning, neuromorphic and reservoir computing, adversarial and stealth attacks and natural language processing. </p>
         </tr>
@@ -105,7 +105,40 @@
     </table>
 
 
-
+<!--     
+    <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+        <tbody>
+            <tr>
+                <td style="padding:10px;width:31%;vertical-align:top;">
+                    <div style="display:table;height:100%;width:100%;">
+                        <div style="display:table-cell;vertical-align:top;">
+                            <img src='images/adversarial.png' style="max-width: 100%; height: auto; display: block;">
+                        </div>
+                    </div>
+                </td>
+    
+                <td style="padding:10px;width:70%;vertical-align:top;">
+                    <div style="display:table;height:100%;">
+                        <div style="display:table-cell;vertical-align:top;">
+                            <strong>How adversarial attacks can disrupt seemingly stable accurate classifiers</strong>
+                            <br>
+                            <a href="https://oliversutton.info/">Oliver J. Sutton</a>,
+                            <strong>Qinghua Zhou</strong>, 
+                            <a href="https://www.kcl.ac.uk/people/ivan-tyukin-1">Ivan Y Tyukin</a>
+                            <a href="https://scholar.google.co.uk/citations?user=D8XkcCIAAAAJ&hl=en">Alexander N. Gorban</a>, 
+                            <a href="https://abastounis.com/">Alexander Bastounis</a>,
+                            <a href="https://www.maths.ed.ac.uk/~dhigham/">Desmond J. Higham</a>
+                            <br>
+                            <em>Neural Networks</em>, 2024
+                            <br>
+                            <a class="main_color underline" href="https://arxiv.org/abs/2406.12670v1">Paper</a>
+                            <p>We demonstrate a fundamental feature of classifiers working with high dimensional input data: simultaneous susceptibility of the model to adversarial attacks, and robustness to random perturbations of the input data. Even small margins can hide adversarial susceptibility! We provide theoretical framework and extensive empirical vertification that using additive noise during training or testing is inefficient for eradicating or detecting adversarial examples. </p>
+                        </div>
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+    </table> -->
 
     <footer>
         <p>© 2024 Qinghua Zhou. All Rights Reserved.</p>
