--- a/index.html
+++ b/index.html
@@ -243,6 +243,20 @@
             </tr>
         </tbody>
     </table>
+
+
+    <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+        <tbody>
+            <tr>
+                <td style="padding:20px 5px;width:100%;vertical-align:middle;">
+                    <p>
+                       More works can be found on my
+                        <a href="https://scholar.google.com/citations?hl=en&user=VY_Ldu4AAAAJ&view_op=list_works&sortby=pubdate"><i class="fa fa-graduation-cap"></i>Google Scholar</a> page.
+                    </p>
+                </td>
+            </tr>
+        </tbody>
+    </table>
     <footer>
         <p>© 2024 Qinghua Zhou. All Rights Reserved.</p>
     </footer>
