--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                             <br>
                             <em>NeurIPS</em>, 2024
                             <br>
-                            <a class="main_color underline" href="https://arxiv.org/abs/2406.12670v1">Paper</a>
+                            <a class="main_color underline" href="https://arxiv.org/html/2406.12670v1">Paper</a>
                             |
                             <a class="main_color underline" href="https://github.com/qinghua-zhou/stealth-edits">Code</a>
                             |
