updated links and bio

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
                 <p>I am currently working as a <a href="https://kclpure.kcl.ac.uk/portal/en/persons/qinghua.zhou">Postdoctoral Research Associate in Methods and Algorithms of AI</a> in the Department of Mathematics at <a href="https://www.kcl.ac.uk/">King's College London (KCL)</a>, where I’m fortunate to work with <a href="https://oliversutton.info/">Dr Oliver J. Sutton</a> and be advised by <a href="https://www.kcl.ac.uk/people/ivan-tyukin-1">Prof. Ivan Y. Tyukin</a>. I have received a PhD from the <a href="https://le.ac.uk/">University of Leicester</a> with a focus on learning from high-dimensional low-sample size data in medical applications. Before that, I received a Bachelor of Science degree from the <a href="https://www.sydney.edu.au/">University of Sydney (USYD)</a>, majoring in both Physics and Applied Mathematics, with an introduction to scientific research through the lens of Asteroseismology.</p>
                 
-                <p>My broad interest in the field of AI has led to practical experiences in a wide variety of domains, including ensemble learning, weak-supervision, few-shot learning, neuromorphic and reservoir computing, adversarial and stealth attacks and natural language processing. </p>
+                <!-- <p>My broad interest in the field of AI has led to practical experiences in a wide variety of domains, including ensemble learning, weak-supervision, few-shot learning, neuromorphic and reservoir computing, adversarial and stealth attacks and natural language processing. </p> -->
         </tr>
         </tbody></table>
     </td></tr>
@@ -98,6 +98,8 @@
                             <a class="main_color underline" href="https://github.com/qinghua-zhou/stealth-edits">Code</a>
                             |
                             <a class="main_color underline" href="https://huggingface.co/spaces/qinghua-zhou/stealth-edits">Huggingface Demo</a>
+                            |
+                            <a class="main_color underline" href="https://www.siam.org/publications/siam-news/articles/how-to-exploit-large-language-models-for-good-or-bad/">SIAM News Article</a>
                             <p>We expose the susceptibility of modern AI models to a new class of malicious attacks and reveal a new theoretical understanding of the causes behind this. This work enables us to either introduce external model components with easily 10,000 edits/layer with almost no impact on the model or hide an attack that is virtually impossible to detect, and even if the attack is found, it is impossible to determine the triggering prompt.  </p>
                         </div>
                     </div>
@@ -235,7 +237,7 @@
                             <br>
                             <em>IJCNN</em>, 2022
                             <br>
-                            <a class="main_color underline" href="https://ieeexplore.ieee.org/document/9892337">Paper</a> (Journal version in the works!)
+                            <a class="main_color underline" href="https://ieeexplore.ieee.org/document/9892337">Paper</a> 
                             <p>Here we examine correlations between the accuracies of trained networks and the values of some easily computable measures defined on randomly initialised networks. While prior works by Mellor et al. focused on volume-based measures, we examine measures of intrinsic dimensionality and quasi-orthogonality. Our empiricial observations further validates prior theoretical findings, and the work provides new measures and perspectives for zero-shot neural architectural search (NAS).</p>
                         </div>
                     </div>
