--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         </tbody>
     </table>
 
-    <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+    <!-- <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
         <tbody>
             <tr>
                 <td style="padding:10px;width:31%;vertical-align:top;">
@@ -176,7 +176,7 @@
                 </td>
             </tr>
         </tbody>
-    </table>
+    </table> -->
 
 
     <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
@@ -212,7 +212,7 @@
         </tbody>
     </table>
 
-    <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+    <!-- <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
         <tbody>
             <tr>
                 <td style="padding:10px;width:31%;vertical-align:top;">
@@ -244,7 +244,7 @@
                 </td>
             </tr>
         </tbody>
-    </table>
+    </table> -->
 
 
     <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
