--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                             <br>
                             <em>Neural Networks</em>, 2024
                             <br>
-                            <a class="main_color underline" href="https://www.sciencedirect.com/science/article/pii/S089360802400635X">Paper</a>
+                            <!-- <a class="main_color underline" href="https://www.sciencedirect.com/science/article/pii/S089360802400635X">Paper</a> -->
                             <p>We demonstrate a fundamental feature of classifiers working with high dimensional input data: simultaneous susceptibility of an 'accurate' model to adversarial attacks, and robustness to random perturbations of the input data. We provide theoretical framework and extensive empirical vertification that using additive noise during training or testing is inefficient for eradicating or detecting adversarial examples, and insufficient for certification of robustness! </p>
                         </div>
                     </div>
@@ -203,7 +203,7 @@
                             <br>
                             <em>Neural Networks</em>, 2023
                             <br>
-                            <a class="main_color underline" href="https://ieeexplore.ieee.org/document/9593931">Initial work</a>, <a class="main_color underline" href="https://www.sciencedirect.com/science/article/pii/S0893608023004483">Paper</a>
+                            <!-- <a class="main_color underline" href="https://ieeexplore.ieee.org/document/9593931">Initial work</a>, <a class="main_color underline" href="https://www.sciencedirect.com/science/article/pii/S0893608023004483">Paper</a> -->
                             <p>Learning in the high dimensional and low-sample size (HDLS) domain is recognised as one of the core challenges for modern AI. Here we introduce a novel stacking method that utilises attention pooling mechanisms for ensembles and cascades. We provide extensive empirical experiments over a range of HDLS datasets in the medical domain.</p>
                         </div>
                     </div>
