--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <td style="padding:10px;width:70%;vertical-align:top;">
                     <div style="display:table;height:100%;">
                         <div style="display:table-cell;vertical-align:top;">
-                            <strong>Stealth edits for provably fixing or attacking large language models</strong>
+                            <strong>Stealth edits for large language models</strong>
                             <br>
                             <a href="https://oliversutton.info/">Oliver J. Sutton*</a>,
                             <strong>Qinghua Zhou</strong>*, 
